[bug 1172603] [bug 1172604] Search on mobile product pages

--- a/kitsune/sumo/static/sumo/less/mobile/products.less
+++ b/kitsune/sumo/static/sumo/less/mobile/products.less
@@ -1,15 +1,33 @@
 @import '../variables.less';
 @import 'mixins.less';
 
+.product-landing,
 .documents {
-  h2 {
-    background: @borderLightGrey;
-    font-size: 20px;
-    margin: 0;
-    padding: 10px 16px;
+  .search-bar {
+    background: #fff;
+    border-bottom: 1px solid @borderLightGrey;
+    height: 50px;
+    position: fixed;
+    top: 51px;
+    width: 100%;
+    z-index: 10;
+
+    input {
+      background: @mobileFormBackground;
+      border: 0;
+      box-sizing: border-box;
+      height: 50px;
+      padding: 0 16px;
+      width: 100%;
+    }
   }
 
-  .document-list {
+  .wrapper {
+    top: 102px;
+  }
+}
+
+.document-list {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -26,6 +44,14 @@
         text-decoration: none;
       }
     }
+  }
+
+.documents {
+  h2 {
+    background: @borderLightGrey;
+    font-size: 20px;
+    margin: 0;
+    padding: 10px 16px;
   }
 
   > header {
